added testCLient for circuitBreaker

--- a/clientCircuitBreaker /pom.xml
+++ b/clientCircuitBreaker /pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.ea.oss.enterprise</groupId>
-	<artifactId>archetype</artifactId>
+	<groupId>com.ea.callingClient</groupId>
+	<artifactId>clientCircuitBreaker </artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>archetype</name>
+	<name>clientCircuitBreaker </name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -35,50 +35,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-		<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-starter-eureka</artifactId>
-				<version>1.2.0.RELEASE</version>
-		</dependency>
-
-		<dependency>
-	      <groupId>org.springframework.cloud</groupId>
-	      <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-  		  <version>2.0.0.RELEASE</version>
-		</dependency>
-
-
 	</dependencies>
-
-<!-- Inserted Dependencies here -->
-
-<dependencyManagement>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-netflix</artifactId>
-            <version>2.0.1.BUILD-SNAPSHOT</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-    </dependencies>
-</dependencyManagement>
-
-
-
-<repositories>
-    <repository>
-        <id>spring-snapshots</id>
-        <name>Spring Snapshots</name>
-        <url>https://repo.spring.io/libs-snapshot</url>
-        <snapshots>
-            <enabled>true</enabled>
-        </snapshots>
-    </repository>
-</repositories>
-
-
 
 	<build>
 		<plugins>
